--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,10 @@ android {
         debug {
             resValue "string", "app_name", "osu!droid-debug"
             applicationIdSuffix '.debug'
+            zipAlignEnabled true
+            minifyEnabled true            
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard.cfg', 'proguard-kotlin.pro'
+            signingConfig signingConfigs.release
         }
 
         release {
