--- a/LibBASS/build.gradle
+++ b/LibBASS/build.gradle
@@ -1,26 +1,24 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
-    ndkVersion '22.1.7171670'
+    compileSdkVersion 29
+
+
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-    }
 
-    lintOptions {
-        abortOnError true
-        ignoreWarnings true
-        disable 'ExpiredTargetSdkVersion'
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
         release {
             minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
