--- a/LibBASS/build.gradle
+++ b/LibBASS/build.gradle
@@ -3,22 +3,23 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 29
 
-
-
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+    }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+    lintOptions {
+        abortOnError true
+        ignoreWarnings true
+        disable 'ExpiredTargetSdkVersion'
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
