Update dependencies and proguard mapping

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -92,6 +92,7 @@
 # -keep class com.umeng.** {*;}
 
 -keepattributes SourceFile,LineNumberTable
+-keep public class * extends java.lang.Exception
 
 -dontwarn okio.**
 -dontnote retrofit2.Platform
